--- a/admin-attendance-leave-mngmnt.html
+++ b/admin-attendance-leave-mngmnt.html
@@ -9,13 +9,13 @@
 </head>
 <body class="bg-gray-100">
     <!-- Navbar -->
-    <nav class="bg-blue-600 p-4 shadow-md">
+    <nav class="bg-orange-600 p-4 shadow-md">
         <div class="container mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll Management</h1>
             <div class="space-x-4">
                 <a href="admin-dashboard.html" class="text-white hover:text-black mr-4">Dashboard</a>
                 <a href="settings2.html" class="text-white hover:text-black">Settings</a>
-                <a href="signin-signup.html" class="text-white hover:text-black">Logout</a>
+                <a href="signin.html" class="text-white hover:text-black">Logout</a>
             </div>
         </div>
     </nav>
