--- a/payroll-processing.html
+++ b/payroll-processing.html
@@ -9,13 +9,13 @@
 </head>
 <body class="bg-gray-100">
     <!-- Navbar -->
-    <nav class="bg-blue-600 p-4 shadow-md">
+    <nav class="bg-orange-600 p-4 shadow-md">
         <div class="container mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System</h1>
             <div>
                 <a href="admin-dashboard.html" class="text-white hover:text-black mr-4">Dashboard</a>
                 <a href="settings2.html" class="text-white hover:text-black mr-4">Settings</a>
-                <a href="signin-signup.html" class="text-white hover:text-black">Logout</a>
+                <a href="signin.html" class="text-white hover:text-black">Logout</a>
             </div>
         </div>
     </nav>
@@ -51,13 +51,13 @@
             <input type="text" id="net-pay" class="mb-4 p-2 border border-gray-300 rounded w-full" placeholder="Net Pay will be calculated" readonly />
 
             <div class="flex justify-end">
-                <button type="button" id="calculate-btn" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                <button type="button" id="calculate-btn" class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded">
                     Calculate Net Pay
                 </button>
                 <button type="button" id="preview-btn" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded ml-4" onclick="previewPayslip()">
                     Preview Payslip
                 </button>
-                <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded ml-4"><a href="payslip-generation.html">Generate Payslip</a>
+                <button type="submit" class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded ml-4"><a href="payslip-generation.html">Generate Payslip</a>
                     
                 </button>
             </div>
