--- a/payroll-reports.html
+++ b/payroll-reports.html
@@ -9,14 +9,14 @@
 </head>
 <body class="bg-gray-100">
     <!-- Navbar -->
-    <nav class="bg-blue-600 p-4 shadow-md">
+    <nav class="bg-orange-600 p-4 shadow-md">
         <div class="container mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System</h1>
             <div>
                 <a href="admin-dashboard.html" class="text-white hover:text-black mr-4">Dashboard</a>
                 <a href="payroll-processing.html" class="text-white hover:text-black mr-4">Payroll Processing</a>
                 <a href="settings2.html" class="text-white hover:text-black mr-4">Settings</a>
-                <a href="signin-signup.html" class="text-white hover:text-black">Logout</a>
+                <a href="signin.html" class="text-white hover:text-black">Logout</a>
             </div>
         </div>
     </nav>
@@ -76,7 +76,7 @@
         </div>
 
         <div class="flex justify-start mt-6">
-            <a href="payroll-processing.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+            <a href="payroll-processing.html" class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded">
                 Back to Payroll Processing
             </a>
         </div>
