--- a/signin.html
+++ b/signin.html
@@ -46,7 +46,7 @@
                         <option value="user">User</option>
                     </select>
                 </div>
-                <button type="submit" class="w-full bg-blue-600 text-white font-bold py-2 rounded-lg hover:bg-blue-700 transition">Login</button>
+                <button type="submit" class="w-full bg-orange-600 text-white font-bold py-2 rounded-lg hover:bg-orange-700 transition">Login</button>
             </form>
         </div>
     </div>
