--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -8,14 +8,14 @@
 </head>
 <body class="bg-gray-100">
     <!-- Navbar -->
-    <nav class="bg-blue-600 p-4 shadow-md">
+    <nav class="bg-orange-600 p-4 shadow-md">
         <div class="container mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll Dashboard</h1>
             <div class="space-x-4">
                 <a href="user-profile.html" class="text-white hover:text-black">Profile</a>
                 <a href="user-settings.html" class="text-white hover:text-black">User Settings</a>
                 <a href="user-notification.html" class="text-white hover:text-black">Notifications</a>
-                <a href="signin-signup.html" class="text-white hover:text-black">Logout</a>
+                <a href="signin.html" class="text-white hover:text-black">Logout</a>
             </div>
         </div>
     </nav>
