--- a/user-settings.html
+++ b/user-settings.html
@@ -9,15 +9,15 @@
 <body class="bg-gray-100">
 
     <!-- Navbar -->
-    <nav class="bg-blue-600 p-4">
+    <nav class="bg-orange-600 p-4">
         <div class="container mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System - User</h1>
-            <a href="user-dashboard.html" class="bg-white text-blue-600 px-4 py-2 rounded hover:bg-blue-200 transition">Dashboard</a>
+            <a href="user-dashboard.html" class="bg-white text-orange-600 px-4 py-2 rounded hover:bg-orange-200 transition">Dashboard</a>
         </div>
     </nav>
 
     <!-- Header -->
-    <header class="bg-blue-600 text-white text-center py-8">
+    <header class="bg-orange-600 text-white text-center py-8">
         <h2 class="text-3xl font-bold">User Settings</h2>
         <p class="mt-4">Manage your account, notification preferences, and security settings.</p>
     </header>
@@ -41,7 +41,7 @@
                         <label class="block text-sm font-medium mb-2">Phone Number</label>
                         <input type="text" placeholder="" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                     </div>
-                    <button class="bg-blue-600 text-white font-bold px-4 py-2 rounded-lg hover:bg-blue-700">Save Changes</button>
+                    <button class="bg-orange-600 text-white font-bold px-4 py-2 rounded-lg hover:bg-orange-700">Save Changes</button>
                 </form>
             </div>
 
@@ -59,7 +59,7 @@
                         <input type="checkbox" id="smsNotifications" class="mr-2">
                         <label for="smsNotifications">Receive SMS notifications for important alerts</label>
                     </div>
-                    <button class="bg-blue-600 text-white font-bold px-4 py-2 rounded-lg hover:bg-blue-700">Save Preferences</button>
+                    <button class="bg-orange-600 text-white font-bold px-4 py-2 rounded-lg hover:bg-orange-700">Save Preferences</button>
                 </form>
             </div>
 
@@ -79,7 +79,7 @@
                         <label class="block text-sm font-medium mb-2">Confirm New Password</label>
                         <input type="password" placeholder="Confirm new password" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                     </div>
-                    <button class="bg-blue-600 text-white font-bold px-4 py-2 rounded-lg hover:bg-blue-700">Update Password</button>
+                    <button class="bg-orange-600 text-white font-bold px-4 py-2 rounded-lg hover:bg-orange-700">Update Password</button>
                 </form>
             </div>
         </div>
