--- a/add-newemployee.html
+++ b/add-newemployee.html
@@ -9,15 +9,15 @@
 <body class="bg-gray-100">
 
     <!-- Navbar -->
-    <nav class="bg-blue-600 p-4">
+    <nav class="bg-orange-600 p-4">
         <div class="container mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System - Admin</h1>
-            <a href="admin-dashboard.html" class="bg-white text-blue-600 px-4 py-2 rounded hover:bg-blue-200 transition">Dashboard</a>
+            <a href="admin-dashboard.html" class="bg-white text-orange-600 px-4 py-2 rounded hover:bg-orange-200 transition">Dashboard</a>
         </div>
     </nav>
 
     <!-- Header -->
-    <header class="bg-blue-600 text-white text-center py-8">
+    <header class="bg-orange-600 text-white text-center py-8">
         <h2 class="text-3xl font-bold">Add New Employee</h2>
         <p class="mt-4">Enter the details below to add a new employee to the payroll system.</p>
     </header>
@@ -80,7 +80,7 @@
 
                 <!-- Buttons -->
                 <div class="flex justify-between items-center">
-                    <button type="submit" class="bg-blue-600 text-white font-bold px-4 py-2 rounded-lg hover:bg-blue-700"><a href="admin-employee-added.html">Add Employee</a></button>
+                    <button type="submit" class="bg-orange-600 text-white font-bold px-4 py-2 rounded-lg hover:bg-blue-700"><a href="admin-employee-added.html">Add Employee</a></button>
                     <a href="admin-dashboard.html" class="bg-gray-600 text-white font-bold px-4 py-2 rounded-lg hover:bg-gray-700">Cancel</a>
                 </div>
             </form>
