--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -10,13 +10,13 @@
 <body class="bg-gray-100">
 
     <!-- Navbar -->
-    <nav class="bg-blue-600 p-4 shadow-md">
+    <nav class="bg-orange-600 p-4 shadow-md">
         <div class="container mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System</h1>
             <div>
                 <a href="admin-profile.html" class="text-white hover:text-black mr-4">Profile</a>
                 <a href="settings2.html" class="text-white hover:text-black mr-4">Settings</a>
-                <a href="signin-signup.html" class="text-white hover:text-black">Logout</a>
+                <a href="signin.html" class="text-white hover:text-black">Logout</a>
             </div>
         </div>
     </nav>
@@ -32,7 +32,7 @@
                     <h3 class="text-xl font-bold text-gray-700">Employee Management</h3>
                     <p class="text-gray-500">Add, edit, or remove employees</p>
                 </div>
-                <a href="employee-management.html" class="bg-gray-500 hover:bg-blue-500 text-white px-4 py-2 rounded">Manage</a>
+                <a href="employee-management.html" class="bg-orange-500  hover:bg-orange-700 text-white px-4 py-2 rounded">Manage</a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg flex items-center justify-between">
@@ -40,7 +40,7 @@
                     <h3 class="text-xl font-bold text-gray-700">Payroll</h3>
                     <p class="text-gray-500">Process and generate payslips</p>
                 </div>
-                <a href="payroll-processing.html" class="bg-gray-500  hover:bg-blue-500 text-white px-4 py-2 rounded">Process</a>
+                <a href="payroll-processing.html" class="bg-orange-500  hover:bg-orange-700 text-white px-4 py-2 rounded">Process</a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg flex items-center justify-between">
@@ -48,7 +48,7 @@
                     <h3 class="text-xl font-bold text-gray-700">Attendance</h3>
                     <p class="text-gray-500">View employee attendance records</p>
                 </div>
-                <a href="admin-attendance-leave-mngmnt.html" class="bg-gray-500 hover:bg-blue-500 text-white px-4 py-2 rounded">View</a>
+                <a href="admin-attendance-leave-mngmnt.html" class="bg-orange-500  hover:bg-orange-700 text-white px-4 py-2 rounded">View</a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg flex items-center justify-between">
@@ -56,7 +56,7 @@
                     <h3 class="text-xl font-bold text-gray-700">Salary Structure</h3>
                     <p class="text-gray-500">Manage salary structures and components</p>
                 </div>
-                <a href="admin-salary-struct.html" class="bg-gray-500 hover:bg-blue-500 text-white px-4 py-2 rounded">Setup</a>
+                <a href="admin-salary-struct.html" class="bg-orange-500  hover:bg-orange-700 text-white px-4 py-2 rounded">Setup</a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg flex items-center justify-between">
@@ -64,7 +64,7 @@
                     <h3 class="text-xl font-bold text-gray-700">Reports</h3>
                     <p class="text-gray-500">Generate payroll, tax, and other reports</p>
                 </div>
-                <a href="admin-generate-reports.html" class="bg-gray-500 hover:bg-blue-500 text-white px-4 py-2 rounded">Generate</a>
+                <a href="admin-generate-reports.html" class="bg-orange-500  hover:bg-orange-700 text-white px-4 py-2 rounded">Generate</a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg flex items-center justify-between">
@@ -72,7 +72,7 @@
                     <h3 class="text-xl font-bold text-gray-700">Tax & Compliance</h3>
                     <p class="text-gray-500">Manage tax calculations and compliance</p>
                 </div>
-                <a href="tax-compliance.html" class="bg-gray-500 hover:bg-blue-500 text-white px-4 py-2 rounded">Manage</a>
+                <a href="tax-compliance.html" class="bg-orange-500  hover:bg-orange-700 text-white px-4 py-2 rounded">Manage</a>
             </div>
         </div>
 
