--- a/admin-edit-employee.html
+++ b/admin-edit-employee.html
@@ -9,13 +9,13 @@
 </head>
 <body class="bg-gray-100">
     <!-- Navbar -->
-    <nav class="bg-blue-600 p-4 shadow-md">
+    <nav class="bg-orange-600 p-4 shadow-md">
         <div class="container mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System</h1>
             <div>
                 <a href="employee-management.html" class="text-white hover:text-black mr-4">Employee Management</a>
                 <a href="settings2.html" class="text-white hover:text-black mr-4">Settings</a>
-                <a href="signin-signup.html" class="text-white hover:text-black">Logout</a>
+                <a href="signin.html" class="text-white hover:text-black">Logout</a>
             </div>
         </div>
     </nav>
@@ -51,7 +51,7 @@
             </div>
 
             <div class="flex items-center justify-between">
-                <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"><a href="admin-employee-updated.html">Update Employee</a>
+                <button type="submit" class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"><a href="admin-employee-updated.html">Update Employee</a>
                     
                 </button>
                 <a href="employee-management.html" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Cancel</a>
