--- a/admin-employee-profile.html
+++ b/admin-employee-profile.html
@@ -7,15 +7,15 @@
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100">
+<body class="bg-orange-100">
     <!-- Navbar -->
-    <nav class="bg-blue-600 p-4 shadow-md">
+    <nav class="bg-orange-600 p-4 shadow-md">
         <div class="container mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll Management</h1>
-            <div>
+            <div class="space-x-4">
                 <a href="admin-dashboard.html" class="text-white hover:text-black mr-4">Dashboard</a>
                 <a href="settings2.html" class="text-white hover:text-black">Settings</a>
-                <a href="signin-signup.html" class="text-white hover:text-black">Logout</a>
+                <a href="signin.html" class="text-white hover:text-black">Logout</a>
             </div>
         </div>
     </nav>
@@ -32,7 +32,7 @@
             <p><strong>Department:</strong> IT</p>
             <p><strong>Email:</strong> adhyasharma@example.com</p>
             <p><strong>Phone:</strong> 1234567890</p>
-            <button class="mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"><a href="admin-edit-employee.html"> Edit Employee Information</a>
+            <button class="mt-4 bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded"><a href="admin-edit-employee.html"> Edit Employee Information</a>
                
             </button>
         </div>
