--- a/admin-employee-updated.html
+++ b/admin-employee-updated.html
@@ -9,13 +9,13 @@
 </head>
 <body class="bg-gray-100">
     <!-- Navbar -->
-    <nav class="bg-blue-600 p-4 shadow-md">
+    <nav class="bg-orange-600 p-4 shadow-md">
         <div class="container mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System</h1>
             <div>
                 <a href="employee-management.html" class="text-white hover:text-black mr-4">Employee Management</a>
                 <a href="settings2.html" class="text-white hover:text-black mr-4">Settings</a>
-                <a href="signin-signup.html" class="text-white hover:text-black">Logout</a>
+                <a href="signin.html" class="text-white hover:text-black">Logout</a>
             </div>
         </div>
     </nav>
@@ -25,7 +25,7 @@
         <h2 class="text-3xl font-bold text-green-600 mb-6">Employee Updated Successfully!</h2>
         <p class="text-gray-800 mb-6">The employee details have been updated in the system.</p>
 
-        <a href="employee-management.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+        <a href="employee-management.html" class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded">
             Back to Employee Management
         </a>
     </div>
