--- a/employee-management.html
+++ b/employee-management.html
@@ -9,13 +9,13 @@
 </head>
 <body class="bg-gray-100">
     <!-- Navbar -->
-    <nav class="bg-blue-600 p-4 shadow-md">
+    <nav class="bg-orange-600 p-4 shadow-md">
         <div class="container mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System</h1>
             <div>
                 <a href="admin-dashboard.html" class="text-white hover:text-black mr-4">Dashboard</a>
                 <a href="settings2.html" class="text-white hover:text-black mr-4">Settings</a>
-                <a href="signin-signup.html" class="text-white hover:text-black">Logout</a>
+                <a href="signin.html" class="text-white hover:text-black">Logout</a>
             </div>
         </div>
     </nav>
@@ -60,7 +60,7 @@
                             ₹80,000
                         </td>
                         <td class="py-3 px-6 text-center">
-                            <a href="admin-edit-employee.html" class="text-blue-500 hover:underline mr-2">Edit</a>
+                            <a href="admin-edit-employee.html" class="text-orange-500 hover:underline mr-2">Edit</a>
                             <a href="admin-delete-employee.html" class="text-red-500 hover:underline">Delete</a>
                         </td>
                     </tr>
