--- a/index.html
+++ b/index.html
@@ -1,57 +1,46 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payroll Management System</title>
+    <title>Payroll Management System - Home</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Background Image Styles */
+        .bg-cover-home {
+            background-image: url('/pmimg.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+    </style>
 </head>
-<body class="bg-gray-100"> -->
+<body class="bg-cover-home h-screen flex flex-col justify-between">
 
     <!-- Navbar -->
-    <!-- <nav class="bg-blue-600 p-4">
-        <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-white text-2xl font-bold">Payroll Management System</h1>
-            <a href="signin-signup.html" class="bg-white text-blue-600 px-4 py-2 rounded hover:bg-blue-200 transition">Login</a>
-        </div>
-    </nav> -->
-
-    <!-- Hero Section -->
-    <!-- <header class="bg-blue-600 text-white text-center py-20">
-        <h2 class="text-4xl font-bold">Welcome to the Payroll Management System</h2>
-        <p class="mt-4 text-lg">Streamline your payroll, manage employees, and track attendance with ease.</p>
-        <div class="mt-8">
-            <a href="signin-signup.html" class="bg-white text-blue-600 px-8 py-3 rounded-full font-bold hover:bg-blue-200 transition">Get Started</a>
-        </div>
-    </header> -->
-
-    <!-- Main Content -->
-    <!-- <main class="container mx-auto p-8 text-center">
-        <h3 class="text-2xl font-bold mb-8">Features of Our System</h3>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8"> -->
-            <!-- Feature Card 1 -->
-            <!-- <div class="bg-white p-6 rounded-lg shadow-lg">
-                <h4 class="text-xl font-bold mb-4">Employee Management</h4>
-                <p class="text-gray-600 mb-4">Easily add, manage, and track your employees with our system.</p>
-            </div> -->
-
-            <!-- Feature Card 2 -->
-            <!-- <div class="bg-white p-6 rounded-lg shadow-lg">
-                <h4 class="text-xl font-bold mb-4">Payroll Processing</h4>
-                <p class="text-gray-600 mb-4">Process payroll, calculate salaries, taxes, and generate payslips quickly.</p>
-            </div> -->
-
-            <!-- Feature Card 3 -->
-            <!-- <div class="bg-white p-6 rounded-lg shadow-lg">
-                <h4 class="text-xl font-bold mb-4">Attendance & Leave Management</h4>
-                <p class="text-gray-600 mb-4">Track attendance, approve leaves, and manage employee working hours.</p>
+    <nav class="bg-black bg-opacity-50 p-4">
+        <div class="container mx-auto flex justify-between items-center text-white">
+            <h1 class="text-2xl font-bold">Payroll Management System</h1>
+            <div>
+                <a href="signin.html" class="mx-2 bg-orange-200 text-black px-4 py-2 rounded-lg hover:bg-orange-300">Sign In</a>
+                <a href="signup.html" class="mx-2 bg-orange-200 text-black px-4 py-2 rounded-lg hover:bg-orange-300">Sign Up</a>
             </div>
         </div>
-    </main> -->
+    </nav>
+
+    <!-- Main Content -->
+    <div class="flex-grow flex items-center justify-center">
+        <div class="text-center bg-black bg-opacity-50 p-8 rounded-lg">
+            <h2 class="text-white text-4xl font-bold mb-4">Welcome to Payroll Management System</h2>
+            <p class="text-white text-lg mb-8">Manage your payroll efficiently and effortlessly.</p>
+            <a href="signin.html" class="bg-orange-600 text-white px-6 py-3 rounded-lg hover:bg-orange-700 transition">Get Started</a>
+        </div>
+    </div>
 
     <!-- Footer -->
-    <!-- <footer class="bg-gray-800 text-white text-center py-4 ">
+    <footer class="bg-black bg-opacity-50 text-white text-center p-4">
         <p>&copy; 2024 Payroll Management System. All rights reserved.</p>
     </footer>
+
 </body>
-</html> -->
+</html>
