--- a/payslip-generation.html
+++ b/payslip-generation.html
@@ -9,13 +9,13 @@
 </head>
 <body class="bg-gray-100">
     <!-- Navbar -->
-    <nav class="bg-blue-600 p-4 shadow-md">
+    <nav class="bg-orange-600 p-4 shadow-md">
         <div class="container mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System</h1>
             <div>
                 <a href="employee-management.html" class="text-white hover:text-black mr-4">Employee Management</a>
                 <a href="settings2.html" class="text-white hover:text-black mr-4">Settings</a>
-                <a href="signin-signup.html" class="text-white hover:text-black">Logout</a>
+                <a href="signin.html" class="text-white hover:text-black">Logout</a>
             </div>
         </div>
     </nav>
@@ -43,13 +43,13 @@
             <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded mr-4" onclick="downloadPayslip()">
                 Download Payslip
             </button>
-            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" onclick="printPayslip()">
+            <button class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded" onclick="printPayslip()">
                 Print Payslip
             </button>
         </div>
 
         <div class="flex justify-start mt-6">
-            <a href="payroll-processing.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+            <a href="payroll-processing.html" class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded">
                 Back to Payroll Processing
             </a>
         </div>
