--- a/user-attendance-leave-mngmnt.html
+++ b/user-attendance-leave-mngmnt.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-100">
     <!-- Navbar -->
-    <nav class="bg-blue-600 p-4 shadow-md">
+    <nav class="bg-orange-600 p-4 shadow-md">
         <div class="container mx-auto">
             <a href="user-dashboard.html" class="text-white hover:text-black">Back to Dashboard</a>
         </div>
@@ -33,7 +33,7 @@
                 <input type="date" class="w-full p-2 border rounded-lg mb-4">
                 <label class="block mb-2">End Date:</label>
                 <input type="date" class="w-full p-2 border rounded-lg mb-4">
-                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Apply for Leave</button>
+                <button class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded">Apply for Leave</button>
             </form>
         </div>
     </div>
