--- a/user-payslip-view.html
+++ b/user-payslip-view.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-100">
     <!-- Navbar -->
-    <nav class="bg-blue-600 p-4 shadow-md">
+    <nav class="bg-orange-600 p-4 shadow-md">
         <div class="container mx-auto">
             <a href="user-dashboard.html" class="text-white hover:text-black">Back to Dashboard</a>
         </div>
@@ -31,7 +31,7 @@
                 <label class="block text-sm font-medium">Net Pay:</label>
                 <p class="text-gray-700">₹4500</p>
             </div>
-            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"onclick="download()">Download PDF</button>
+            <button class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded"onclick="download()">Download PDF</button>
         </div>
     </div>
     <script>
