--- a/user-salary-structure-view.html
+++ b/user-salary-structure-view.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-100">
     <!-- Navbar -->
-    <nav class="bg-blue-600 p-4 shadow-md">
+    <nav class="bg-orange-600 p-4 shadow-md">
         <div class="container mx-auto">
             <a href="user-dashboard.html" class="text-white hover:text-black">Back to Dashboard</a>
         </div>
