--- a/admin-edit-employee.html
+++ b/admin-edit-employee.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-100">
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
+        <div class=" mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System</h1>
             <div>
                 <a href="employee-management.html" class="text-white hover:text-black mr-4">Employee Management</a>
@@ -22,32 +22,32 @@
     </nav>
 
     <!-- Edit Employee Form Section -->
-    <div class="container mx-auto p-6">
+    <div class=" mx-auto p-6">
         <h2 class="text-3xl font-bold text-gray-800 mb-6">Edit Employee</h2>
 
         <form class="bg-white shadow-md rounded-lg px-8 pt-6 pb-8 mb-4">
             <div class="mb-4">
-                <label for="name" class="block text-gray-700 text-sm font-bold mb-2">Full Name</label>
+                <label for="name" class=" text-gray-700 text-sm font-bold mb-2">Full Name</label>
                 <input type="text" id="name" value="Adhya Sharma" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
             </div>
 
             <div class="mb-4">
-                <label for="position" class="block text-gray-700 text-sm font-bold mb-2">Position</label>
+                <label for="position" class=" text-gray-700 text-sm font-bold mb-2">Position</label>
                 <input type="text" id="position" value="Software Engineer" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
             </div>
 
             <div class="mb-4">
-                <label for="department" class="block text-gray-700 text-sm font-bold mb-2">Department</label>
+                <label for="department" class="text-gray-700 text-sm font-bold mb-2">Department</label>
                 <input type="text" id="department" value="IT Department" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
             </div>
 
             <div class="mb-4">
-                <label for="salary" class="block text-gray-700 text-sm font-bold mb-2">Salary</label>
+                <label for="salary" class=" text-gray-700 text-sm font-bold mb-2">Salary</label>
                 <input type="number" id="salary" value="80000" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
             </div>
 
             <div class="mb-4">
-                <label for="startDate" class="block text-gray-700 text-sm font-bold mb-2">Start Date</label>
+                <label for="startDate" class=" text-gray-700 text-sm font-bold mb-2">Start Date</label>
                 <input type="date" id="startDate" value="2022-01-01" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
             </div>
 
