--- a/admin-profile.html
+++ b/admin-profile.html
@@ -11,7 +11,7 @@
 
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4">
-        <div class="container mx-auto flex justify-between items-center">
+        <div class=" mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System - Admin</h1>
             <a href="admin-dashboard.html" class="bg-white text-orange-600 px-4 py-2 rounded hover:bg-orange-200 transition">Dashboard</a>
         </div>
@@ -24,7 +24,7 @@
     </header>
 
     <!-- Main Content -->
-    <main class="container mx-auto p-8">
+    <main class="mx-auto p-8">
         <div class="bg-white p-6 rounded-lg shadow-lg max-w-2xl mx-auto">
             <!-- Profile Picture and Name -->
             <div class="text-center mb-6">
@@ -36,28 +36,28 @@
             <!-- Profile Form -->
             <form>
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Full Name</label>
+                    <label class=" text-sm font-medium mb-2">Full Name</label>
                     <input type="text" value="Dakshina raizada" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                 </div>
 
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Email Address</label>
+                    <label class=" text-sm font-medium mb-2">Email Address</label>
                     <input type="email" value="admin@example.com" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                 </div>
 
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Phone Number</label>
+                    <label class=" text-sm font-medium mb-2">Phone Number</label>
                     <input type="text" value="+1234567890" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                 </div>
 
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Address</label>
+                    <label class=" text-sm font-medium mb-2">Address</label>
                     <input type="text" value="Admin Office,Mumbai" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                 </div>
 
                 <!-- Admin-Specific Actions -->
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Admin Role</label>
+                    <label class=" text-sm font-medium mb-2">Admin Role</label>
                     <select class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                         <option>Super Admin</option>
                         <option>HR Manager</option>
