--- a/payroll-processing.html
+++ b/payroll-processing.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-100">
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
+        <div class=" mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System</h1>
             <div>
                 <a href="admin-dashboard.html" class="text-white hover:text-black mr-4">Dashboard</a>
@@ -22,7 +22,7 @@
     </nav>
 
     <!-- Payroll Processing Section -->
-    <div class="container mx-auto p-6">
+    <div class=" mx-auto p-6">
         <h2 class="text-3xl font-bold mb-6">Payroll Processing</h2>
         
         <form class="bg-white shadow-md rounded-lg p-6">
@@ -36,19 +36,19 @@
             </select>
 
             <!-- Gross Salary Calculation -->
-            <label for="gross-salary" class="block text-gray-700 font-bold mb-2">Gross Salary:</label>
+            <label for="gross-salary" class=" text-gray-700 font-bold mb-2">Gross Salary:</label>
             <input type="number" id="gross-salary" class="mb-4 p-2 border border-gray-300 rounded w-full" placeholder="Enter Gross Salary" />
 
             <!-- Tax Deductions -->
-            <label for="tax-deductions" class="block text-gray-700 font-bold mb-2">Tax Deductions (%):</label>
+            <label for="tax-deductions" class="text-gray-700 font-bold mb-2">Tax Deductions (%):</label>
             <input type="number" id="tax-deductions" class="mb-4 p-2 border border-gray-300 rounded w-full" placeholder="Enter Tax Deductions" />
 
             <!-- Bonus and Incentives -->
-            <label for="bonus-incentives" class="block text-gray-700 font-bold mb-2">Bonus and Incentives:</label>
+            <label for="bonus-incentives" class=" text-gray-700 font-bold mb-2">Bonus and Incentives:</label>
             <input type="number" id="bonus-incentives" class="mb-4 p-2 border border-gray-300 rounded w-full" placeholder="Enter Bonus/Incentives" />
 
             <!-- Net Pay Calculation -->
-            <label for="net-pay" class="block text-gray-700 font-bold mb-2">Net Pay:</label>
+            <label for="net-pay" class=" text-gray-700 font-bold mb-2">Net Pay:</label>
             <input type="text" id="net-pay" class="mb-4 p-2 border border-gray-300 rounded w-full" placeholder="Net Pay will be calculated" readonly />
 
             <div class="flex justify-end">
