--- a/tax-compliance.html
+++ b/tax-compliance.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-100">
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
+        <div class=" mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll Management</h1>
             <div class="space-x-4">
                 <a href="admin-dashboard.html" class="text-white hover:text-black mr-4">Dashboard</a>
@@ -22,29 +22,29 @@
     </nav>
 
     <!-- Tax & Compliance Section -->
-    <div class="container mx-auto p-6">
+    <div class=" mx-auto p-6">
         <h2 class="text-3xl font-bold mb-6">Tax & Compliance</h2>
 
         <!-- Tax Slabs Setup -->
         <div class="bg-white shadow-md rounded-lg p-6 mb-6">
             <h3 class="text-xl font-semibold mb-4">Tax Slabs Setup</h3>
-            <label class="block mb-2" for="taxSlab1">Tax Slab 1 (e.g., 0-2.5 Lakhs):</label>
+            <label class=" mb-2" for="taxSlab1">Tax Slab 1 (e.g., 0-2.5 Lakhs):</label>
             <input type="number" id="taxSlab1" placeholder="Enter Tax Percentage" class="border border-gray-300 rounded-lg p-2 mb-4 w-full">
 
-            <label class="block mb-2" for="taxSlab2">Tax Slab 2 (e.g., 2.5-5 Lakhs):</label>
+            <label class=" mb-2" for="taxSlab2">Tax Slab 2 (e.g., 2.5-5 Lakhs):</label>
             <input type="number" id="taxSlab2" placeholder="Enter Tax Percentage" class="border border-gray-300 rounded-lg p-2 mb-4 w-full">
 
-            <label class="block mb-2" for="taxSlab3">Tax Slab 3 (e.g., 5-10 Lakhs):</label>
+            <label class=" mb-2" for="taxSlab3">Tax Slab 3 (e.g., 5-10 Lakhs):</label>
             <input type="number" id="taxSlab3" placeholder="Enter Tax Percentage" class="border border-gray-300 rounded-lg p-2 mb-4 w-full">
 
-            <label class="block mb-2" for="taxSlab4">Tax Slab 4 (Above 10 Lakhs):</label>
+            <label class=" mb-2" for="taxSlab4">Tax Slab 4 (Above 10 Lakhs):</label>
             <input type="number" id="taxSlab4" placeholder="Enter Tax Percentage" class="border border-gray-300 rounded-lg p-2 mb-4 w-full">
         </div>
 
         <!-- Automatic Tax Deduction Configuration -->
         <div class="bg-white shadow-md rounded-lg p-6 mb-6">
             <h3 class="text-xl font-semibold mb-4">Automatic Tax Deduction</h3>
-            <label class="block mb-2" for="autoTaxDeduction">Enable Automatic Tax Deduction:</label>
+            <label class=" mb-2" for="autoTaxDeduction">Enable Automatic Tax Deduction:</label>
             <select id="autoTaxDeduction" class="border border-gray-300 rounded-lg p-2 mb-4 w-full">
                 <option value="yes">Yes</option>
                 <option value="no">No</option>
@@ -62,7 +62,7 @@
         <!-- Tax Submission Deadline Reminder -->
         <div class="bg-white shadow-md rounded-lg p-6 mb-6">
             <h3 class="text-xl font-semibold mb-4">Tax Submission Deadlines</h3>
-            <label class="block mb-2" for="taxDeadline">Set Reminder for Tax Deadline:</label>
+            <label class=" mb-2" for="taxDeadline">Set Reminder for Tax Deadline:</label>
             <input type="date" id="taxDeadline" class="border border-gray-300 rounded-lg p-2 mb-4 w-full">
 
             <button class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded" onclick="remainder()">
