--- a/user-attendance-leave-mngmnt.html
+++ b/user-attendance-leave-mngmnt.html
@@ -16,7 +16,7 @@
     </nav>
 
     <!-- Attendance Content -->
-    <div class="container mx-auto p-6">
+    <div class=" mx-auto p-6">
         <h2 class="text-3xl font-bold mb-6">Attendance & Leave</h2>
         <div class="bg-white shadow-md rounded-lg p-6">
             <h3 class="text-xl font-bold mb-4">Attendance for [Month]</h3>
@@ -24,15 +24,15 @@
 
             <h3 class="text-xl font-bold mb-4">Apply for Leave</h3>
             <form>
-                <label class="block mb-2">Leave Type:</label>
+                <label class="mb-2">Leave Type:</label>
                 <select class="w-full p-2 border rounded-lg mb-4">
                     <option>Sick Leave</option>
                     <option>Casual Leave</option>
                     <option>Paid Leave</option>
                 </select>
-                <label class="block mb-2">Start Date:</label>
+                <label class=" mb-2">Start Date:</label>
                 <input type="date" class="w-full p-2 border rounded-lg mb-4">
-                <label class="block mb-2">End Date:</label>
+                <label class=" mb-2">End Date:</label>
                 <input type="date" class="w-full p-2 border rounded-lg mb-4">
                 <button class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded">Apply for Leave</button>
             </form>
