--- a/user-settings.html
+++ b/user-settings.html
@@ -11,7 +11,7 @@
 
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4">
-        <div class="container mx-auto flex justify-between items-center">
+        <div class=" mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System - User</h1>
             <a href="user-dashboard.html" class="bg-white text-orange-600 px-4 py-2 rounded hover:bg-orange-200 transition">Dashboard</a>
         </div>
@@ -24,22 +24,22 @@
     </header>
 
     <!-- Main Content -->
-    <main class="container mx-auto p-8">
+    <main class=" mx-auto p-8">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
             <!-- Profile Settings -->
             <div class="bg-white p-6 rounded-lg shadow-lg">
                 <h3 class="text-xl font-bold mb-4">Profile Settings</h3>
                 <form>
                     <div class="mb-4">
-                        <label class="block text-sm font-medium mb-2">Full Name</label>
+                        <label class=" text-sm font-medium mb-2">Full Name</label>
                         <input type="text" placeholder="" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                     </div>
                     <div class="mb-4">
-                        <label class="block text-sm font-medium mb-2">Email Address</label>
+                        <label class=" text-sm font-medium mb-2">Email Address</label>
                         <input type="email" placeholder="" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                     </div>
                     <div class="mb-4">
-                        <label class="block text-sm font-medium mb-2">Phone Number</label>
+                        <label class=" text-sm font-medium mb-2">Phone Number</label>
                         <input type="text" placeholder="" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                     </div>
                     <button class="bg-orange-600 text-white font-bold px-4 py-2 rounded-lg hover:bg-orange-700">Save Changes</button>
@@ -51,12 +51,12 @@
                 <h3 class="text-xl font-bold mb-4">Notification Settings</h3>
                 <form>
                     <div class="mb-4">
-                        <label class="block text-sm font-medium mb-2">Email Notifications</label>
+                        <label class=" text-sm font-medium mb-2">Email Notifications</label>
                         <input type="checkbox" id="emailNotifications" class="mr-2">
                         <label for="emailNotifications">Receive email notifications for payroll updates</label>
                     </div>
                     <div class="mb-4">
-                        <label class="block text-sm font-medium mb-2">SMS Notifications</label>
+                        <label class=" text-sm font-medium mb-2">SMS Notifications</label>
                         <input type="checkbox" id="smsNotifications" class="mr-2">
                         <label for="smsNotifications">Receive SMS notifications for important alerts</label>
                     </div>
@@ -69,15 +69,15 @@
                 <h3 class="text-xl font-bold mb-4">Security Settings</h3>
                 <form>
                     <div class="mb-4">
-                        <label class="block text-sm font-medium mb-2">Current Password</label>
+                        <label class=" text-sm font-medium mb-2">Current Password</label>
                         <input type="password" placeholder="Enter current password" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                     </div>
                     <div class="mb-4">
-                        <label class="block text-sm font-medium mb-2">New Password</label>
+                        <label class=" text-sm font-medium mb-2">New Password</label>
                         <input type="password" placeholder="Enter new password" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                     </div>
                     <div class="mb-4">
-                        <label class="block text-sm font-medium mb-2">Confirm New Password</label>
+                        <label class=" text-sm font-medium mb-2">Confirm New Password</label>
                         <input type="password" placeholder="Confirm new password" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                     </div>
                     <button class="bg-orange-600 text-white font-bold px-4 py-2 rounded-lg hover:bg-orange-700">Update Password</button>
