--- a/add-newemployee.html
+++ b/add-newemployee.html
@@ -10,8 +10,8 @@
 
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4">
-        <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-white text-2xl font-bold">Payroll System - Admin</h1>
+        <div class=" mx-auto flex justify-between items-center">
+            <h1 class="text-white text-2xl font-bold">Payroll System </h1>
             <a href="admin-dashboard.html" class="bg-white text-orange-600 px-4 py-2 rounded hover:bg-orange-200 transition">Dashboard</a>
         </div>
     </nav>
@@ -23,7 +23,7 @@
     </header>
 
     <!-- Main Content -->
-    <main class="container mx-auto p-8">
+    <main class=" mx-auto p-8">
         <div class="bg-white p-6 rounded-lg shadow-lg max-w-2xl mx-auto">
             <!-- Form Heading -->
             <h3 class="text-xl font-bold mb-4">Employee Details</h3>
@@ -32,28 +32,28 @@
             <form>
                 <!-- Personal Information -->
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Full Name</label>
+                    <label class=" text-sm font-medium mb-2">Full Name</label>
                     <input type="text" placeholder="" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                 </div>
 
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Email Address</label>
+                    <label class=" text-sm font-medium mb-2">Email Address</label>
                     <input type="email" placeholder="" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                 </div>
 
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Phone Number</label>
+                    <label class=" text-sm font-medium mb-2">Phone Number</label>
                     <input type="text" placeholder="" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                 </div>
 
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Address</label>
+                    <label class=" text-sm font-medium mb-2">Address</label>
                     <input type="text" placeholder="" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                 </div>
 
                 <!-- Professional Information -->
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Department</label>
+                    <label class=" text-sm font-medium mb-2">Department</label>
                     <select class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                         <option>Select Department</option>
                         <option>Finance</option>
@@ -64,23 +64,23 @@
                 </div>
 
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Position</label>
+                    <label class="text-sm font-medium mb-2">Position</label>
                     <input type="text" placeholder="" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                 </div>
 
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Date of Joining</label>
+                    <label class=" text-sm font-medium mb-2">Date of Joining</label>
                     <input type="date" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                 </div>
 
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Salary</label>
+                    <label class=" text-sm font-medium mb-2">Salary</label>
                     <input type="number" placeholder="" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                 </div>
 
                 <!-- Buttons -->
                 <div class="flex justify-between items-center">
-                    <button type="submit" class="bg-orange-600 text-white font-bold px-4 py-2 rounded-lg hover:bg-blue-700"><a href="admin-employee-added.html">Add Employee</a></button>
+                    <button type="submit" class="bg-orange-600 text-white font-bold px-4 py-2 rounded-lg hover:bg-orange-700"><a href="admin-employee-added.html">Add Employee</a></button>
                     <a href="admin-dashboard.html" class="bg-gray-600 text-white font-bold px-4 py-2 rounded-lg hover:bg-gray-700">Cancel</a>
                 </div>
             </form>
