--- a/admin-attendance-leave-mngmnt.html
+++ b/admin-attendance-leave-mngmnt.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-100">
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
+        <div class=" mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll Management</h1>
             <div class="space-x-4">
                 <a href="admin-dashboard.html" class="text-white hover:text-black mr-4">Dashboard</a>
@@ -21,7 +21,7 @@
     </nav>
 
     <!-- Attendance and Leave Management Section -->
-    <div class="container mx-auto p-6">
+    <div class=" mx-auto p-6">
         <h2 class="text-3xl font-bold mb-6">Attendance and Leave Management</h2>
 
         <!-- Calendar View -->
@@ -83,7 +83,7 @@
         <!-- Attendance Tracking -->
         <div class="bg-white shadow-md rounded-lg p-6 mb-6">
             <h3 class="text-xl font-semibold mb-4">Attendance Tracking</h3>
-            <label class="block mb-2 font-bold">Select Employee</label>
+            <label class=" mb-2 font-bold">Select Employee</label>
             <select class="w-full p-2 border rounded-md">
                 <option>Select Employee</option>
                 <option>Adhya Sharma - IT</option>
@@ -91,10 +91,10 @@
                 <!-- More employees -->
             </select>
 
-            <label class="block mt-4 mb-2 font-bold">Total Days Worked</label>
+            <label class=" mt-4 mb-2 font-bold">Total Days Worked</label>
             <input type="number" class="w-full p-2 border rounded-md" placeholder="Enter number of days worked">
 
-            <label class="block mt-4 mb-2 font-bold">Overtime Hours</label>
+            <label class=" mt-4 mb-2 font-bold">Overtime Hours</label>
             <input type="number" class="w-full p-2 border rounded-md" placeholder="Enter overtime hours">
         </div>
 
