--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -12,7 +12,7 @@
 
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
+        <div class=" mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System</h1>
             <div>
                 <a href="admin-profile.html" class="text-white hover:text-black mr-4">Profile</a>
@@ -23,7 +23,7 @@
     </nav>
 
     <!-- Main Dashboard Section -->
-    <div class="container mx-auto p-6">
+    <div class="mx-auto p-6">
         <h2 class="text-3xl font-bold text-gray-800 mb-6">Welcome, [Admin]!</h2>
 
         <!-- Quick Access Buttons -->
