--- a/admin-delete-employee.html
+++ b/admin-delete-employee.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-100">
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
+        <div class="mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System</h1>
             <div>
                 <a href="employee-management.html" class="text-white hover:text-black mr-4">Employee Management</a>
@@ -22,7 +22,7 @@
     </nav>
 
     <!-- Delete Employee Section -->
-    <div class="container mx-auto p-6 text-center">
+    <div class=" mx-auto p-6 text-center">
         <h2 class="text-3xl font-bold text-red-600 mb-6">Delete Employee</h2>
         <p class="text-gray-800 mb-6">Are you sure you want to delete this employee?</p>
         <p class="text-gray-700 mb-4">This action cannot be undone.</p>
