--- a/admin-employee-profile.html
+++ b/admin-employee-profile.html
@@ -11,7 +11,7 @@
 <body class="bg-orange-100">
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
+        <div class=" mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll Management</h1>
             <div class="space-x-4">
                 <a href="admin-dashboard.html" class="text-white hover:text-black mr-4">Dashboard</a>
@@ -22,7 +22,7 @@
     </nav>
 
     <!-- Employee Profile Section -->
-    <div class="container mx-auto p-6">
+    <div class=" mx-auto p-6">
         <h2 class="text-3xl font-bold mb-6">Employee Profile</h2>
 
         <!-- Employee Information -->
