--- a/admin-generate-reports.html
+++ b/admin-generate-reports.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-100">
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
+        <div class=" mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System</h1>
             <div class="space-x-4">
                 <a href="admin-dashboard.html" class="text-white hover:text-black mr-4">Dashboard</a>
@@ -22,17 +22,17 @@
     </nav>
 
     <!-- Report Generation Section -->
-    <div class="container mx-auto p-6">
+    <div class=" mx-auto p-6">
         <h2 class="text-3xl font-bold mb-6">Generate Reports</h2>
         <form class="bg-white shadow-md rounded-lg p-6">
-            <label for="report-type" class="block text-gray-700 font-bold mb-2">Select Report Type:</label>
+            <label for="report-type" class="text-gray-700 font-bold mb-2">Select Report Type:</label>
             <select id="report-type" class="mb-4 p-2 border border-gray-300 rounded w-full">
                 <option value="employee-summary">Employee Summary</option>
                 <option value="payroll-report">Payroll Report</option>
                 <option value="attendance-report">Attendance Report</option>
             </select>
 
-            <label for="date-range" class="block text-gray-700 font-bold mb-2">Select Date Range:</label>
+            <label for="date-range" class=" text-gray-700 font-bold mb-2">Select Date Range:</label>
             <input type="date" id="start-date" class="mb-4 p-2 border border-gray-300 rounded w-full" />
             <input type="date" id="end-date" class="mb-4 p-2 border border-gray-300 rounded w-full" />
 
