--- a/employee-management.html
+++ b/employee-management.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-100">
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
+        <div class=" mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System</h1>
             <div>
                 <a href="admin-dashboard.html" class="text-white hover:text-black mr-4">Dashboard</a>
@@ -22,7 +22,7 @@
     </nav>
 
     <!-- Employee Management Section -->
-    <div class="container mx-auto p-6">
+    <div class=" mx-auto p-6">
         <h2 class="text-3xl font-bold text-gray-800 mb-6">Employee Management</h2>
 
         <!-- Add New Employee Button -->
@@ -33,7 +33,7 @@
         </div>
 
         <!-- Employee Table -->
-        <div class="bg-white shadow-md rounded-lg overflow-x-auto">
+        <div class="bg-white shadow-md rounded-lg ">
             <table class="min-w-full table-auto">
                 <thead>
                     <tr class="bg-gray-200 text-gray-600 uppercase text-sm leading-normal">
@@ -45,7 +45,7 @@
                     </tr>
                 </thead>
                 <tbody class="text-gray-600 text-sm">
-                    <tr class="border-b border-gray-200 hover:bg-gray-100">
+                    <tr class=" border-gray-200 hover:bg-gray-100">
                         <td class="py-3 px-6 text-left whitespace-nowrap">
                             <div class="flex items-center">
                                 <span class="font-medium"><a href="admin-employee-profile.html">Adhya Sharma</a></span>
