--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Navbar -->
     <nav class="bg-black bg-opacity-50 p-4">
-        <div class="container mx-auto flex justify-between items-center text-white">
+        <div class=" mx-auto flex justify-between items-center text-white">
             <h1 class="text-2xl font-bold">Payroll Management System</h1>
             <div>
                 <a href="signin.html" class="mx-2 bg-orange-200 text-black px-4 py-2 rounded-lg hover:bg-orange-300">Sign In</a>
