--- a/payslip-generation.html
+++ b/payslip-generation.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-100">
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
+        <div class=" mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll System</h1>
             <div>
                 <a href="employee-management.html" class="text-white hover:text-black mr-4">Employee Management</a>
@@ -22,7 +22,7 @@
     </nav>
 
     <!-- Payslip Generation Section -->
-    <div class="container mx-auto p-6">
+    <div class=" mx-auto p-6">
         <h2 class="text-3xl font-bold mb-6">Payslip for Adhya sharma</h2>
         
         <div class="bg-white shadow-md rounded-lg p-6 mb-4">
