--- a/settings2.html
+++ b/settings2.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-100">
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
+        <div class=" mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll Management</h1>
             <div>
                 <a href="admin-dashboard.html" class="text-white hover:text-black mr-4">Dashboard</a>
@@ -21,19 +21,19 @@
     </nav>
 
     <!-- Settings Section -->
-    <div class="container mx-auto p-6">
+    <div class=" mx-auto p-6">
         <h2 class="text-3xl font-bold mb-6">Settings</h2>
 
         <!-- Company Profile -->
         <div class="bg-white shadow-md rounded-lg p-6 mb-6">
             <h3 class="text-xl font-semibold mb-4">Company Profile</h3>
-            <label class="block mb-2" for="companyName">Company Name:</label>
+            <label class=" mb-2" for="companyName">Company Name:</label>
             <input type="text" id="companyName" placeholder="Enter Company Name" class="border border-gray-300 rounded-lg p-2 mb-4 w-full">
 
-            <label class="block mb-2" for="address">Address:</label>
+            <label class=" mb-2" for="address">Address:</label>
             <input type="text" id="address" placeholder="Enter Company Address" class="border border-gray-300 rounded-lg p-2 mb-4 w-full">
 
-            <label class="block mb-2" for="taxId">Tax ID:</label>
+            <label class=" mb-2" for="taxId">Tax ID:</label>
             <input type="text" id="taxId" placeholder="Enter Tax ID" class="border border-gray-300 rounded-lg p-2 mb-4 w-full">
         </div>
 
@@ -58,7 +58,7 @@
         <!-- Notification Settings -->
         <div class="bg-white shadow-md rounded-lg p-6 mb-6">
             <h3 class="text-xl font-semibold mb-4">Notification Settings</h3>
-            <label class="block mb-2" for="payrollNotifications">Payroll Processing Notifications:</label>
+            <label class=" mb-2" for="payrollNotifications">Payroll Processing Notifications:</label>
             <select id="payrollNotifications" class="border border-gray-300 rounded-lg p-2 mb-4 w-full">
                 <option value="email">Email Alerts</option>
                 <option value="sms">SMS Alerts</option>
