--- a/signup.html
+++ b/signup.html
@@ -30,19 +30,19 @@
             <h2 class="text-2xl font-bold text-center mb-6">Sign Up</h2>
             <form onsubmit="event.preventDefault(); handleSignUp();">
                 <div class="mb-4">
-                    <label class="block mb-2 text-sm font-medium">Name</label>
+                    <label class=" mb-2 text-sm font-medium">Name</label>
                     <input id="name" type="text" placeholder="Enter your name" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                 </div>
                 <div class="mb-4">
-                    <label class="block mb-2 text-sm font-medium">Email</label>
+                    <label class=" mb-2 text-sm font-medium">Email</label>
                     <input id="email" type="email" placeholder="Enter your email" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                 </div>
                 <div class="mb-4">
-                    <label class="block mb-2 text-sm font-medium">Password</label>
+                    <label class=" mb-2 text-sm font-medium">Password</label>
                     <input id="password" type="password" placeholder="Enter your password" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
                 </div>
                 <div class="mb-4">
-                    <label class="block mb-2 text-sm font-medium">Role</label>
+                    <label class=" mb-2 text-sm font-medium">Role</label>
                     <select id="role" class="w-full px-4 py-2 border rounded-lg">
                         <option value="">Select Role</option>
                         <option value="admin">Admin</option>
