--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-100">
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
+        <div class=" mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll Dashboard</h1>
             <div class="space-x-4">
                 <a href="user-profile.html" class="text-white hover:text-black">Profile</a>
@@ -22,7 +22,7 @@
     </nav>
 
     <!-- Main Content -->
-    <div class="container mx-auto p-6">
+    <div class=" mx-auto p-6">
         <h2 class="text-3xl font-bold mb-6">Welcome, [Employee Name]</h2>
 
         <!-- Quick Actions -->
