--- a/user-notification.html
+++ b/user-notification.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-100">
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
+        <div class=" mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold">Payroll Dashboard</h1>
             <div>
                 <a href="user-dashboard.html" class="text-white hover:text-black">Back to Dashboard</a>
@@ -19,7 +19,7 @@
     </nav>
 
     <!-- Main Content -->
-    <div class="container mx-auto p-6">
+    <div class=" mx-auto p-6">
         <!-- <h2 class="text-3xl font-bold mb-6">Dashboard</h2> -->
         <div class="bg-white p-8 rounded-lg shadow-md text-center">
             <h3 class="text-xl font-bold">No new notifications.</h3>
