--- a/user-payslip-view.html
+++ b/user-payslip-view.html
@@ -10,26 +10,26 @@
 <body class="bg-gray-100">
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4 shadow-md">
-        <div class="container mx-auto">
+        <div class=" mx-auto">
             <a href="user-dashboard.html" class="text-white hover:text-black">Back to Dashboard</a>
         </div>
     </nav>
 
     <!-- Payslip Content -->
-    <div class="container mx-auto p-6">
+    <div class=" mx-auto p-6">
         <h2 class="text-3xl font-bold mb-6">Payslip for [Month]</h2>
         <div class="bg-white shadow-md rounded-lg p-6">
             <h3 class="text-xl font-bold mb-4">Salary Breakdown</h3>
             <div class="mb-4">
-                <label class="block text-sm font-medium">Gross Salary:</label>
+                <label class=" text-sm font-medium">Gross Salary:</label>
                 <p class="text-gray-700">₹5000</p>
             </div>
             <div class="mb-4">
-                <label class="block text-sm font-medium">Tax Deductions:</label>
+                <label class=" text-sm font-medium">Tax Deductions:</label>
                 <p class="text-gray-700">₹500</p>
             </div>
             <div class="mb-4">
-                <label class="block text-sm font-medium">Net Pay:</label>
+                <label class="text-sm font-medium">Net Pay:</label>
                 <p class="text-gray-700">₹4500</p>
             </div>
             <button class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded"onclick="download()">Download PDF</button>
