--- a/user-salary-structure-view.html
+++ b/user-salary-structure-view.html
@@ -10,30 +10,30 @@
 <body class="bg-gray-100">
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4 shadow-md">
-        <div class="container mx-auto">
+        <div class=" mx-auto">
             <a href="user-dashboard.html" class="text-white hover:text-black">Back to Dashboard</a>
         </div>
     </nav>
 
     <!-- Salary Structure Content -->
-    <div class="container mx-auto p-6">
+    <div class=" mx-auto p-6">
         <h2 class="text-3xl font-bold mb-6">Salary Structure</h2>
         <div class="bg-white shadow-md rounded-lg p-6">
             <h3 class="text-xl font-bold mb-4">Your Salary Breakdown</h3>
             <div class="mb-4">
-                <label class="block text-sm font-medium">Basic Salary:</label>
+                <label class=" text-sm font-medium">Basic Salary:</label>
                 <p class="text-gray-700">₹3000</p>
             </div>
             <div class="mb-4">
-                <label class="block text-sm font-medium">HRA:</label>
+                <label class=" text-sm font-medium">HRA:</label>
                 <p class="text-gray-700">₹1000</p>
             </div>
             <div class="mb-4">
-                <label class="block text-sm font-medium">Allowances:</label>
+                <label class=" text-sm font-medium">Allowances:</label>
                 <p class="text-gray-700">₹500</p>
             </div>
             <div class="mb-4">
-                <label class="block text-sm font-medium">Deductions:</label>
+                <label class="text-sm font-medium">Deductions:</label>
                 <p class="text-gray-700">₹300</p>
             </div>
         </div>
